fix: align-items e align-content corrigidos

--- a/style.css
+++ b/style.css
@@ -185,7 +185,14 @@ pre {
     white-space: nowrap;
 }
 /*=====================================align-items=====================================*/
-.align-items .item{
+.align-items { column-gap: 1rem;}
+.item-align {
+    background-color: var(--logo-color);
+    color: var(--primary-color);
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100px;
     flex-wrap: wrap;
 }
